--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "novakertech",
-  "description": "Build a personal website, blog, or portfolio with Astro.",
+  "description": "novaker.tech website",
   "private": true,
   "cloudflare": {
-    "label": "Astro Framework Starter",
+    "label": "novaker.tech website",
     "products": [
       "Workers"
     ],
@@ -15,11 +15,13 @@
     "publish": true
   },
   "dependencies": {
-    "@astrojs/cloudflare": "12.6.0",
-    "@astrojs/mdx": "4.3.0",
-    "@astrojs/rss": "4.0.11",
-    "@astrojs/sitemap": "3.4.1",
-    "astro": "5.10.1",
+    "@astrojs/cloudflare": "^12.6.6",
+    "@astrojs/mdx": "^4.3.4",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.5.1",
+    "@tailwindcss/vite": "^4.1.12",
+    "astro": "^5.13.4",
+    "tailwindcss": "^4.1.12",
     "typescript": "5.8.3"
   },
   "devDependencies": {
